--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@ html {
     margin: 0 auto;
     padding: 0;
     min-height: 100%;
+    /* background-color: rgb(145, 41, 136); */
+    /* background-image: url("../img/GradientBackground.png"); */
   }
   
   *,
@@ -34,7 +36,7 @@ html {
     align-items: center;
     line-height: 1rem;
     overflow: hidden;
-    background-color: #fff;
+    background-color: rgba(161, 46, 151, 0);
   }
   
   .logo,
@@ -71,7 +73,7 @@ html {
     text-decoration: none;
     letter-spacing: 0.2rem;
     padding: 0.8rem;
-    color: #000;
+    color: rgb(0, 0, 0);
   }
   
   .logo a {
@@ -82,12 +84,12 @@ html {
   .nav-menu a {
     font-weight: 400;
     letter-spacing: 0.1rem;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
     transition: all ease 0.1s;
   }
   
   .nav-menu a:hover {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgb(141, 60, 141);
   }
   
   /* Hero Header Navbar Changes */
@@ -154,7 +156,7 @@ html {
   
   .hero-video {
     background-color: #000;
-    background-image: url("../img/ocean.jpg");
+    background-image: url("../img/VectorPortrait.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -231,7 +233,7 @@ html {
   }
   
   .about-social a {
-    color: rgb(108, 36, 117);
+    color: rgb(142, 86, 150);
     padding: 0 1rem 1rem 1rem;
   }
   
@@ -367,7 +369,7 @@ html {
   }
   
   .footer-social a {
-    color: black;
+    color: rgb(0, 0, 0);
     padding: 0 1rem;
   }
   
