--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html {
     margin: 0 auto;
     padding: 0;
     min-height: 100%;
-    /* background-color: rgb(145, 41, 136); */
+    background-color: rgb(54, 43, 53);
     /* background-image: url("../img/GradientBackground.png"); */
   }
   
@@ -36,7 +36,7 @@ html {
     align-items: center;
     line-height: 1rem;
     overflow: hidden;
-    background-color: rgba(161, 46, 151, 0);
+    background-color: rgb(54, 43, 53);
   }
   
   .logo,
@@ -73,7 +73,7 @@ html {
     text-decoration: none;
     letter-spacing: 0.2rem;
     padding: 0.8rem;
-    color: rgb(0, 0, 0);
+    color: rgb(248, 243, 220);
   }
   
   .logo a {
@@ -233,13 +233,14 @@ html {
   }
   
   .about-social a {
-    color: rgb(142, 86, 150);
+    color: rgb(248, 243, 220);
     padding: 0 1rem 1rem 1rem;
   }
   
   /* Begin Grid Gallery Styles */
   .gallery-page {
     padding: 0 1rem 10rem 1rem;
+    color: rgb(248, 243, 220);;
   }
   
   .portfolio-gallery {
@@ -369,13 +370,14 @@ html {
   }
   
   .footer-social a {
-    color: rgb(0, 0, 0);
+    color: rgb(248, 243, 220);
     padding: 0 1rem;
   }
   
   .footer-copyright {
     text-align: center;
     padding-bottom: 6rem;
+    color:rgb(248, 243, 220);
   }
   
   /* Add Medida Queries for large Screens */
@@ -414,10 +416,12 @@ html {
     .about-text h1 {
       font-size: 3rem;
       line-height: 3rem;
+      color: rgb(248, 243, 220);;
     }
     .about-text p {
       font-size: 1.1rem;
       line-height: 1.5rem;
+      color: rgb(248, 243, 220);
     }
   
     /* Grid column and row spans for wider screens */
